--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,6 @@
   margin-top: 5rem;
 }
 
-.main-outlet {
-  padding-top: 45rem !important;
+.checkout-container {
+  padding-top: 48rem !important;
 }
